--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 | Homes
-    
+    <title>WDD130 | Home
+
     </title>
 
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="wwr/index.html">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="positioning.html">Positioning Activity</a>
+            <a href="#">Personal Website</a>
+            <a href="#">Personal Siteplan</a>
+        </nav>
+        <main>  
+            <h1>Emmanuel Aiyetan</h1> 
+            <img src=" IMG_7369.jpeg "  width="250" 
+            height="350" alt="Image of Me">
+            <p>I'm A freshman here at BYUI and i come from Nigeria</p>
+            <p>My hobbies are playing soccer and basketball</p>
+        </main>
+    </header>
 </body>
+</html>
